2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:

	Use AutoJSContextStack on window open.
	Disable XPrint.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:
	
	Set printer name setting.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* doc/reference/Makefile.am:
	
	Try to fix the docs build with gecko trunk.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/languages.h:
	
	Remove suprious entry.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar-editor.c:(ephy_toolbar_editor_response):
	
	Make sure to destroy the dialogue in all cases.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:
	R embed/mozilla/MozillaPrivate.cpp:
	R embed/mozilla/MozillaPrivate.h:
	
	Remove unused files.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EventContext.cpp:
	
	Don't start search on <embed> and <object> elements.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:
	
	Don't leak the UI language.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:
	
	Add more mime types.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* data/epiphany.schemas.in:
	
	Document the print_frames key.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp:
	
	Decrease maximum progress update to 0.5s

2006-08-05  Christian Persch  <chpe@cvs.gnome.org>

	* lib/Makefile.am:
	
	Fix the build.

2006-08-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-shell.c: (ephy_embed_shell_set_page_setup),
	(ephy_embed_shell_set_print_settings):
	
	Fix the build.

2006-08-05  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:
	
	Remove accel for ViewToolbar. Bug #328783.

2006-08-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-shell.c: (ephy_embed_shell_set_page_setup),