@@ -1,5 +1,11 @@
 2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/mozilla-notifiers.cpp:
+	
+	Simply CallGetService to get the pref branch.
+
+2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/mozilla-embed-single.cpp:
 
 	Use AutoJSContextStack on window open.
